WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26399
REGRESSION: java applet accessibility broken
https://bugs.webkit.org/show_bug.cgi?id=26399
Summary
REGRESSION: java applet accessibility broken
chris fleizach
Reported
2009-06-14 23:04:13 PDT
the accessibility of java applets is broken is safari 4.0. it looks like the attachment view holding the java applet is not actually the object in the AX hierarchy
Attachments
patch
(7.61 KB, patch)
2009-06-14 23:06 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-06-14 23:06:53 PDT
Created
attachment 31281
[details]
patch
chris fleizach
Comment 2
2009-06-14 23:12:02 PDT
http://trac.webkit.org/changeset/44678
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug