Bug 26399: REGRESSION: java applet accessibility broken https://bugs.webkit.org/show_bug.cgi?id=26399

Canonical link: https://commits.webkit.org/36496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44678 268f45cc-cd09-0410-ab3c-d52691b4dbfc