WebCore/manual-tests/accessibility/resources/AppletTest.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2008 Apple Inc. All rights reserved.
+ * Copyright (C) 2009 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -10,8 +10,8 @@
  *    notice, this list of conditions and the following disclaimer in the
  *    documentation and/or other materials provided with the distribution.
  *
- * THIS SOFTWARE IS PROVIDED BY APPLE COMPUTER, INC. ``AS IS'' AND ANY
- * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS "AS IS" AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
  * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL APPLE COMPUTER, INC. OR
  * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
@@ -23,24 +23,22 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#import "config.h"
-#import "AccessibilityObject.h"
+/* Source for a test applet used by layout tests. */
 
-#if HAVE(ACCESSIBILITY)
+import javax.swing.*;
 
-#import "AccessibilityObjectWrapper.h"
-
-namespace WebCore {
-
-bool AccessibilityObject::accessibilityIgnoreAttachment() const
-{
-    NSView* attachment = [wrapper() attachmentView];
-    if (!attachment)
-        return true;
+public class AppletTest extends JApplet { 
     
-    return [attachment accessibilityIsIgnored];
+    public void init() { 
+
+        setLayout(null); 
+        JButton button = new JButton("button"); 
+        JTextField textField = new JTextField("TextField",20); 
+
+        button.setBounds(10,10,100,30); 
+        textField.setBounds(10,40,100,40); 
+        
+        add(button); 
+        add(textField); 
+    }    
 }
-    
-} // WebCore
-
-#endif // HAVE(ACCESSIBILITY)
